Version 1.0b To be released
===========================
- Added CWebServiceAction.serviceOptions
- Added CAPTCHA to application generated by yiic webapp

Version 1.0a October 5, 2008
=============================
Initial release