@@ -1,7 +1,8 @@
 Version 1.0b To be released
 ===========================
-- Added CWebServiceAction.serviceOptions
-- Added CAPTCHA to application generated by yiic webapp
+- Added CWebServiceAction.serviceOptions (Qiang)
+- Added CAPTCHA to application generated by yiic webapp (Qiang)
+- Enabled CHtml::activeXXX to deal with multirow input
 
 Version 1.0a October 5, 2008
 =============================
